# rolling-hash-algorithm

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: differences_printer.h  file.h  file_interface.h  hash_comparator.h  hash_creator.h  input_arguments_checker.h  signature_creator.h
lib/: CMakeLists.txt  CMakeLists.txt.in
src/: differences_printer.cpp  file.cpp  hash_comparator.cpp  hash_creator.cpp  input_arguments_checker.cpp  signature_creator.cpp
test/: CMakeLists.txt  CMakeLists.txt.in  hash_comparator_test.cpp  hash_creator_test.cpp  input_arguments_checker_test.cpp  main_test.cpp  signature_creator_test.cpp
test/mock/: file_interface_mock.h
